<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/duaempat"
    tools:context=".ui.profile.PasswordActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/purple_stroke"
        android:drawableStart="@drawable/ic_unlock"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:textColorHint="@color/hintColor"
        android:textColorHighlight="@color/mainFontColor"
        android:hint="@string/password"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:inputType="textPassword"
        android:textColor="@color/hintColor"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_re_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        android:drawableStart="@drawable/ic_unlock"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/re_password"
        android:textColorHint="@color/hintColor"
        android:textColorHighlight="@color/mainFontColor"
        android:inputType="textPassword"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:textColor="@color/hintColor"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@drawable/purple_gradient"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>