<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <ImageView
        android:id="@+id/img_user"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/delapanbelas"
        app:layout_constraintEnd_toEndOf="@+id/img_user"
        app:layout_constraintStart_toStartOf="@+id/img_user"
        app:layout_constraintTop_toBottomOf="@+id/img_user"
        tools:text="Muhammad Asrul Aji Pangestu"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        tools:text="asrulajipanegstu@gmail.com"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="52dp"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:drawablePadding="@dimen/delapanbelas"
        android:textColor="@color/mainFontColor"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:drawableStart="@drawable/ic_profile"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bg"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="@dimen/delapanbelas"
        android:layout_marginEnd="52dp"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:drawablePadding="@dimen/delapanbelas"
        android:textColor="@color/mainFontColor"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:drawableStart="@drawable/ic_unlock"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_info"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="@dimen/delapanbelas"
        android:layout_marginEnd="52dp"
        android:text="@string/about_developer"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:drawablePadding="@dimen/delapanbelas"
        android:textColor="@color/mainFontColor"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:drawableStart="@drawable/ic_info_square"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_password"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:background="@drawable/purple_gradient"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_info" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/delapanbelas"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/version"
        android:textColor="@color/salmonEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>