<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.profile.EditProfileActivity">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/profile_bg"
        app:layout_constraintBottom_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/duaempat"
        android:contentDescription="@string/app_name"
        android:paddingBottom="@dimen/delapanbelas"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edit"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/duaempat"
        android:layout_marginStart="@dimen/duaempat"
        android:layout_marginEnd="@dimen/duaempat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/purple_stroke"
            android:hint="@string/full_name"
            android:paddingStart="@dimen/duaempat"
            android:paddingEnd="@dimen/duaempat"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="@dimen/duaempat"
        android:layout_marginEnd="@dimen/duaempat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/purple_stroke"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:paddingStart="@dimen/duaempat"
            android:paddingEnd="@dimen/duaempat"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nik_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="@dimen/duaempat"
        android:layout_marginEnd="@dimen/duaempat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/purple_stroke"
            android:hint="@string/nik"
            android:inputType="number"
            android:paddingStart="@dimen/duaempat"
            android:paddingEnd="@dimen/duaempat"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthday_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="@dimen/duaempat"
        android:layout_marginEnd="@dimen/duaempat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nik_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_birthday"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/purple_stroke"
            android:focusable="false"
            android:hint="@string/birthday"
            android:paddingStart="@dimen/duaempat"
            android:paddingEnd="@dimen/duaempat"
            android:textColorHint="@color/hintColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/duaempat"
        android:layout_marginEnd="@dimen/duaempat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_layout">

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/delapanbelas"
            android:paddingEnd="@dimen/delapanbelas"
            android:theme="@style/CustomSpinner" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:background="@drawable/purple_gradient"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>