<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/duaempat"
    android:paddingEnd="@dimen/duaempat"
    tools:context=".ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="56dp"
        app:cardCornerRadius="@dimen/duaempat">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue_gradient"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/purple_stroke"
        android:drawableStart="@drawable/ic_message"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:textColorHint="@color/hintColor"
        android:textColorHighlight="@color/mainFontColor"
        android:hint="@string/email"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:textColor="@color/hintColor"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/delapanbelas"
        android:background="@drawable/purple_stroke"
        android:drawableStart="@drawable/ic_unlock"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:textColorHint="@color/hintColor"
        android:textColorHighlight="@color/mainFontColor"
        android:inputType="textPassword"
        android:paddingStart="@dimen/delapanbelas"
        android:paddingEnd="@dimen/delapanbelas"
        android:textColor="@color/hintColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/delapanbelas"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:text="Anda belum punya akun? Daftar sekarang!"
        android:textAlignment="textEnd"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@drawable/purple_gradient"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>